editted ambassodor yaml

--- a/Ambassator/ambassodorContainer.yaml
+++ b/Ambassator/ambassodorContainer.yaml
@@ -13,6 +13,8 @@ spec:
     ports:
     - containerPort: 8080
 
+
+    # finally do kubectl logs -f ambassodor # to see the logs of this pod
 ---
 
 apiVersion: v1
