edited and added describtion to nodeWeight.yaml

--- a/manualScheduling/nodeAffinity/nodeWeight.yaml
+++ b/manualScheduling/nodeAffinity/nodeWeight.yaml
@@ -1,3 +1,5 @@
+# dont forget to label any of the nodes with disk in hdd
+# eg "kubectl label node <name> disk=hdd"
 apiVersion: v1
 kind: Pod
 metadata:
