added oom example

--- a/ResourceLimits/oom-example.yaml
+++ b/ResourceLimits/oom-example.yaml
@@ -12,5 +12,5 @@ spec:
       limits:
         memory: "100Mi"
     command: ["stress"]
-    args: ["--vm", "1", "--vm-bytes", "250M", "--vm-hang", "1"]
+    args: ["--vm", "1", "--vm-bytes", "250M", "--vm-hang", "1"] #in this case it is requesting more CPU
 
